--- a/posts/2016-02-03.md
+++ b/posts/2016-02-03.md
@@ -205,7 +205,7 @@ While it is intended to be unsettling, the example shows differential privacy wo
 
 The parable of the young internist tells us more about the sophistication of the paper’s authors than it does about the young internist’s potential. Should electronic medical health records be discarded because an emergency room doctor has a hard time remembering his password, putting his patients’ lives at risk? Should we reject the role of the round peg because it does not fill square holes? No. These examples, and that of the young internist, are silly cases of the misuse of very useful tools.
 
-Differential privacy provides opportunities that wouldn't otherwise exist, but they don't solve all of the world's problems. This internist may need to get access to the raw data to do her job, which can be fine if other controls are in place. Pretending that differential privacy should be used everywhere without question is obviously deranged: when doctors prescribe medication, should the result be differentially private? ("100ccs of raccoon, stat!") Obviously not.
+Differential privacy provides opportunities that wouldn't otherwise exist, but it doesn't solve all of the world's problems. This internist may need to get access to the raw data to do her job, which can be fine if other privacy controls are in place. Pretending that differential privacy should be used everywhere without question is obviously deranged: when doctors prescribe medication, should the result be differentially private? ("100ccs of raccoon, stat!") Obviously not.
 
 On the other hand, I am very much in favor of having restrictive privacy controls like differential privacy be the default, especially for internists trained in privacy by the authors.
  
@@ -219,11 +219,11 @@ it continues with
 
 > ... suggesting, at least in some cases, that the proponents of differential privacy do not themselves fully understand the theory.
 
-Ok friends. This is about to get real.
+I think *someone* doesn't understand differential privacy. Let's find out who.
 
 #### Part IIa: The average Lithuanian woman
 
-This section describes an example privacy concern that goes roughly as follows: Imagine we know that someone's height is two inches shorter than that of the average Lithuanian woman; would revealing that statistic violate the someone's privacy?
+This section relates an oft-invoked example privacy concern that goes roughly as follows: Imagine we know that someone's height is two inches shorter than that of the average Lithuanian woman; would revealing that statistic violate the someone's privacy?
 
 The example was original constructed as part of a *reductio ad absurdum* argument: this "privacy concern" exists even if the someone isn't a Lithuanian woman (and so presumably isn't even in the dataset). This particular type of side information vexxed a great deal of folks who wanted to provide absolute privacy guarantees: the results of a query should reveal nothing specific that could not be known without the results of the query. This example is meant to be an "oh shit" moment for absolute privacy.
 
@@ -231,15 +231,17 @@ Differential privacy specifically changes its goals, protecting fewer but more s
 
 Differential privacy is a way to clearly delineate between secrets that are yours to keep, and information that could be revealed by others. Without this line, you get only negative results about absolute privacy.
 
+The authors spend a few paragraphs mystified by the example, and actually make some progress towards its conclusion: that the relative information about the heights is the problem, not accurate release of average heights.
+
 That misunderstanding aside, the section continues with an investigation of how well Laplace noise addition would work with the average height of Lithuanian women generally, and women in the small town of Smalininkai (containing apparently 350 women).  The conclusion is that the results are pretty accurate for Lithuania generally, and less accurate for Smalininkai.
 
 Good, right? I mean, it's a much smaller population, and so we should be expected to learn much less. The authors close with this thought:
 
 > One could rationalize that smaller subgroups need more noise to protect the confidential information, but the exact same distribution of noise would also be applied to a database query system that uses a small but randomly selected (and unknown to the public) subsample of a larger population. So, if a world census allowed researchers to query average heights on a randomly selected sample of 120 Lithuanian women, the results would look just as bizarre as the ones reported in Table 2.
 
-I can't really tell what their concern is here. My best guess is that they think that by random subsampling Lithuanian women, privacy is somehow well protected and you shouldn't have to add any more random noise.
+I can't really tell what their concern is here. My best guess is that they think that by random subsampling Lithuanian women, privacy is somehow well protected and you shouldn't have to add any more random noise. Given that this isn't actually good privacy, I'm glad differential privacy still protects these Lithuanians.
 
-Anyhow, differential privacy working as intended. Clueless people don't get clear access to sensitive data about small populations, no matter how safe they think it should be.
+Anyhow, differential privacy working as intended. Clueless people don't get clear access to sensitive data about small populations, no matter how sure they are that it is safe.
 
 #### Part IIb: Average of variables with long tails
 
@@ -255,7 +257,7 @@ Differential privacy is indeed quite bad at determining the average of variables
 
 > Other approaches have addressed the issue of accuracy for this type of computation by using smooth sensitivity (as previously described), or by considering other functions more in line with robust statistics (eg: the median, other order statistics, the inter-quartile distance). A noised version of the cumulative density function is also easy to produce, as the problem of counting the number of records above or below any threshold has much smaller global sensitivity (namely, one).
 
-That's the text from the email I send them those years back. The authors know this stuff exists, they just don't want to tell you about it. Instead, they write 
+That's the text from the email I send them those years back. The authors know this stuff exists, they just don't want to tell you about it. Instead, they write stuff like
 
 > When it comes to the analysis of continuous, skewed variables (like income), differential privacy’s strict and inflexible promises force a data producer to select from two choices: he can either obliterate the data’s utility, or he can give up on the type of privacy that differential privacy promises.
 
@@ -263,19 +265,21 @@ So, where are you on the whole "ignorance vs malice" spectrum at the moment?
 
 #### Part IIc: Tables
 
-To be fair to the authors, the next section is about "hey what if you count things instead", where they use tables rather than cumulative density functions. Maybe because they really wanted to avoid illustrations.
+To be fair to the authors, the next section is about "hey what if you count things instead", which is what a cumulative density function does, but they go with tables instead. Maybe because they really wanted to avoid illustrations.
 
 > Before we present the results, it is worth reflecting on the loss of utility that comes with the change of format. The accuracy of simple statistics from grouped histogram data is always compromised by the crudeness of the categories. Still, one might expect an improvement over the differential privacy responses for average income that we explored above.
 
-This is a bit disappointing, because the cumulative density function doesn't have "crude categories", it just shows you the continuous distribution. Ok, the lack of forthrightness is getting pretty standard now.
+Really? They are lamenting the loss of utility going from "average of long-tailed variable" to something like the CDF. Statisticians, do you want to help me out here?
 
 So, the authors discuss tabular data, staying with income for now. They write out tables containing counts for folks with various incomes, ranging from the small and reasonable up to 1 billion. In their example, the noised count of people with salaries in excess of 1 billion is five. Based on these noised measurements, they conclude:
 
 > A researcher using the responses above would conclude that the average income among Booneville residents is about $44 million.
 
-Yes, well a stupid researcher would. However, if this researcher has taken an elementary class in probability and statistics, they understand that noisy measurements reflect information about the true data, but are not actually the true data. If you were to phone up 1,000 random people in New York and ask for their salaries, you might take the average you hear as a reasonable representative. On the other hand, you should not conclude that only 1,000 people in New York are employed, and so the average is quite low. You need to pay attention to how you got the data, not just slot it in to your excel spreadsheet.
+Yes, well a stupid researcher would. However, if this researcher has taken an elementary class in probability and statistics, they understand that noisy measurements reflect information about the true data, but are not actually the true data. If you were to phone up 1,000 random people in New York and ask for their salaries, you might take the average you hear as a reasonable representative, or not. What you *should't* do is conclude that only 1,000 people in New York are employed. You need to pay attention to how you got the data, not just slot it in to your excel spreadsheet.
 
-Fortunately, [Bayes' rule](https://en.wikipedia.org/wiki/Bayes%27_theorem) got invented a long time ago, and tells us exactly how to do this. For each measurement, you use the probability of seeing the measurement given some true data, combined with your prior belief about the true data, to produce a new "posterior" belief about the data. Your prior belief about the number of billionaires in the population may be "99.999999% none", and seeing the number 5 updates this to "99.999998% none". Concluding "golly gee; there must be five" takes a special sort of education.
+Fortunately, [Bayes' rule](https://en.wikipedia.org/wiki/Bayes%27_theorem) got invented a long time ago, and tells us exactly how to do this. For each measurement, you use the probability of seeing the measurement given some true data, combined with your prior belief about the true data, to produce a new "posterior" belief about the data. Your prior belief about the number of billionaires in the population may be "99.999999% none", and seeing the number 5 updates this to "99.999998% none", because the number 5 isn't very strong evidence one way or the other.
+
+Concluding "golly gee; there must be five" takes a special sort of education.
 
 So, check with the statisticians working with your data. Ask them if they've heard about Bayes' rule (they have). If they haven't heard about Bayes' rule they probably aren't statisticians; they may be hack privacy researchers instead.
 
@@ -290,11 +294,11 @@ you get abyssmal results. It's true.
 
 The subject of this section is correlations, measurements of depedence between variables, ranging from -1 to 1. A value of 1 indicates that the two variables are perfectly correlated, and a value of -1 indicates that they are perfectly anti-correlated. The authors work through the only technique they know: compute the correlation and then add enough noise to mask a contribution of 1. It does very badly indeed. What should we learn from this?
 
-This is a horrible way to compute such an average. You went and added the noise you would add to large sums over many people to a single [-1.0, 1.0] number. 
+This is a horrible way to compute such an average. You went and added the noise you would add to large sums over many people to a single [-1.0, 1.0] number. What did you think would happen?
 
 Fortunately, there are smarter ways to compute averages, other than first taking the average and then applying noise. And, of course, the authors know this. Earlier in their article, determining Lithuanian heights in Section IIa, the authors reveal that they *do* understand how to compute averages: sum the numerator and add noise, sum the denominator and add noise, then divide one by the other. 
 
-Do not first sum and divide, and then add noise.
+Do not first sum and divide, and then add noise. This entire section is predicated on the idea that you do this.
 
 What the authors make clear here is that there is a difference between a good differentially private algorithm and a bad differentially private algorithm. The authors have invented a bad one, and want you to believe it is the only one.
 
@@ -312,9 +316,9 @@ There are four complaints in this section; let's review them:
 
 2. Laplace noise addition adds way too much noise to statistics that can fluctuate wildly with few users.
    
-   Also true. But for exactly those fluctuation reasons, statisticians use better statistical estimators. Differential privacy seems rather compatible with the improved estimators. You are welcome!
+   Also true. But for exactly those fluctuation reasons, statisticians use better statistical estimators. You should consider using them. Differential privacy seems rather compatible with the improved estimators. You are welcome!
 
-3. People may think that noised counts are true, rather than noisy.
+3. People may think that noised counts are true counts, rather than noised counts.
    
    I suppose. The way to get around this is education. We've written several papers connecting probabilistic inference with differential privacy. You could read them and then help inform people, rather than cynically tell readers that there is no choice but to do things badly.
 
@@ -332,7 +336,7 @@ The article continues with a deconstruction of what went wrong with differential
 2. Differentially private techniques reports noised values, so bear that in mind when you use them.
 3. Differential privacy is a definition, and repeatedly picking stupid mechanisms doesn't mean you should be excused from it.
 
-The section is worth a read for their takedowns of quite famous and well-regarded folks, using their findings from the previous sections as ammunition. I just don't see how it ends well for the authors.
+The section is worth a read for their takedowns of quite famous and well-regarded folks, using the findings from the previous sections as ammunition. I just don't see how it ends well for the authors.
 
 #### Part IV: Conclusions
 
@@ -340,18 +344,21 @@ The conclusions mostly alternate florid prose with a few non-crucial misundersta
 
 > Differential privacy faces a hard choice. It must either recede into the ash heap of theory, or surrender its claim to uniqueness and supremacy.
 
+
 > In its pure form, differential privacy has no chance of broad application. 
 
+
 > In its strictest form, differential privacy is a farce. In its most relaxed form, it’s no different, and no better, than other methods.
+
 
 > Adopting differential privacy as a regulatory best practice or mandate would be the end of research as we know it.
 
 Actually, I really like this last one. "Research as we know it" at the moment seems to allow any random idiot to demand access to data, independent of the privacy cost to the participant. Instead, differential privacy, and techniques like it, align accuracy with privacy, and challenge researchers to frame their questions in a way that best respects privacy. I'm ok with that.
 
-Here is the last line:
+Here is the article's last line:
 
-> Lest we ... *blah blah* ... the legal and policy community must curb its enthusiasm for this trendy theory
+> Lest we ... *blah blah* ... the legal and policy community must curb its enthusiasm for this trendy theory.
 
 You could curb your enthusiasm. Or you could educate yourself. The authors of this paper, and in particular their levels of education, are a travesty. 
 
-Perhaps, independent of your ultimate take on differential privacy, the legal and policy community could curb its enthusiasm for incompetent and/or intentionally dishonest research articles. 
+Perhaps, independent of your ultimate take on differential privacy, the legal and policy community could curb its enthusiasm for incompetent and/or intentionally dishonest research articles. Vanderbilt Journal of Entertainment and Technology Law, I'm looking at you.
