--- a/posts/2016-02-03.md
+++ b/posts/2016-02-03.md
@@ -38,7 +38,7 @@ The Laplace distribution is exponentially concentrated: the probability it has a
 
 ![Laplace proof](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/proof.png)
 
-Now, maybe you grok the proof and maybe you don't. That's fine. But, it's a proof. If you think it isn't actually correct, you are free to point out the faulty step and we can make some progress. So far, I'm only aware of one paper that claims this isn't true, and you might be able to guess who the authors are.
+Now, maybe you grok the proof and maybe you don't. That's fine. But, it's a proof. If you think it isn't actually correct, you are free to point out the faulty step and we can make some progress. So far, I'm only aware of one paper that claims this isn't true, and you will never guess who the authors are.
 
 ### Prelude: An Introduction
 
