--- a/posts/2016-02-03.md
+++ b/posts/2016-02-03.md
@@ -1,6 +1,6 @@
 ## Differential privacy for dummies
 
-A few weeks back I was in Tel Aviv, where the paper behind differential privacy got a "test of time" award.
+A few weeks back I was in Tel Aviv, where the paper behind differential privacy got a "test of time" award. That ruled.
 
 I think differential privacy is quite neat, and still has a great deal of untapped potential. While looking around to see what had happened with it while I was making laptops powerful, I was reminded of several fairly disappointing manuscripts. We had previously ignored them because they were just plain-out wrong, and we imagined that the scientific community would reach the same conclusion. They largely did.
 
