--- a/posts/2016-02-03.md
+++ b/posts/2016-02-03.md
@@ -175,7 +175,7 @@ A few more examples are given in the second email. Maybe a reading comprehension
 
 I didn't hear from them after that. Perhaps my picture actually demonstrated the errors of their ways?
 
-### Fool's Gold
+### The main event: Fool's Gold
 
 Instead what happened was that the authors brought in a friend in the legal field, and they wrote a new paper. A bigger paper, full of breathless hyperbole and purple prose. This paper will be the subject of the rest of the post.
 
