--- a/posts/2016-02-03.md
+++ b/posts/2016-02-03.md
@@ -211,7 +211,7 @@ On the other hand, I am very much in favor of having restrictive privacy control
  
 #### Part II: Stunning failures in application
 
-This section of the paper gives four examples of where differential privacy totally fails. 
+This section of the article gives four examples of where differential privacy totally fails. 
 
 > Part II explores the many contexts in which differential privacy *cannot* provide meaningful protection for privacy without sabotaging the utility of the data. 
 
@@ -239,7 +239,7 @@ Good, right? I mean, it's a much smaller population, and so we should be expecte
 
 > One could rationalize that smaller subgroups need more noise to protect the confidential information, but the exact same distribution of noise would also be applied to a database query system that uses a small but randomly selected (and unknown to the public) subsample of a larger population. So, if a world census allowed researchers to query average heights on a randomly selected sample of 120 Lithuanian women, the results would look just as bizarre as the ones reported in Table 2.
 
-I can't really tell what their concern is here. My best guess is that they think that by random subsampling Lithuanian women, privacy is somehow well protected and you shouldn't have to add any more random noise. Given that this isn't actually good privacy, I'm glad differential privacy still protects these Lithuanians.
+I can't really tell what their concern is here. My best guess is that they think that by randomly subsampling Lithuanian women, privacy is somehow well protected and you shouldn't have to add any more random noise. Given that this isn't actually good privacy, I'm glad differential privacy still protects these Lithuanians.
 
 Anyhow, differential privacy working as intended. Clueless people don't get clear access to sensitive data about small populations, no matter how sure they are that it is safe.
 
@@ -269,13 +269,13 @@ To be fair to the authors, the next section is about "hey what if you count thin
 
 > Before we present the results, it is worth reflecting on the loss of utility that comes with the change of format. The accuracy of simple statistics from grouped histogram data is always compromised by the crudeness of the categories. Still, one might expect an improvement over the differential privacy responses for average income that we explored above.
 
-Really? They are lamenting the loss of utility going from "average of long-tailed variable" to something like the CDF. Statisticians, do you want to help me out here?
+Really? They are lamenting the loss of utility going from "averages of long-tailed variables" to something like the CDF. Statisticians, do you want to help me out here?
 
 So, the authors discuss tabular data, staying with income for now. They write out tables containing counts for folks with various incomes, ranging from the small and reasonable up to 1 billion. In their example, the noised count of people with salaries in excess of 1 billion is five. Based on these noised measurements, they conclude:
 
 > A researcher using the responses above would conclude that the average income among Booneville residents is about $44 million.
 
-Yes, well a stupid researcher would. However, if this researcher has taken an elementary class in probability and statistics, they understand that noisy measurements reflect information about the true data, but are not actually the true data. If you were to phone up 1,000 random people in New York and ask for their salaries, you might take the average you hear as a reasonable representative, or not. What you *should't* do is conclude that only 1,000 people in New York are employed. You need to pay attention to how you got the data, not just slot it in to your excel spreadsheet.
+Yes, well a stupid researcher would. However, if this researcher has taken an elementary class in probability and statistics, they understand that noisy measurements reflect information about the true data, but may not actually be the true data themselves. If you were to phone up 1,000 random people in New York and ask for their salaries, you might take the average you hear as a reasonable representative, or not. What you *should't* do is conclude that only 1,000 people in New York are employed. You need to pay attention to how you got the data, not just slot it in to your excel spreadsheet.
 
 Fortunately, [Bayes' rule](https://en.wikipedia.org/wiki/Bayes%27_theorem) got invented a long time ago, and tells us exactly how to do this. For each measurement, you use the probability of seeing the measurement given some true data, combined with your prior belief about the true data, to produce a new "posterior" belief about the data. Your prior belief about the number of billionaires in the population may be "99.999999% none", and seeing the number 5 updates this to "99.999998% none", because the number 5 isn't very strong evidence one way or the other.
 
@@ -298,7 +298,7 @@ This is a horrible way to compute such an average. You went and added the noise 
 
 Fortunately, there are smarter ways to compute averages, other than first taking the average and then applying noise. And, of course, the authors know this. Earlier in their article, determining Lithuanian heights in Section IIa, the authors reveal that they *do* understand how to compute averages: sum the numerator and add noise, sum the denominator and add noise, then divide one by the other. 
 
-Do not first sum and divide, and then add noise. This entire section is predicated on the idea that you do this.
+Do not first sum and divide, and then add noise. This entire section is predicated on the idea that you do this badly.
 
 What the authors make clear here is that there is a difference between a good differentially private algorithm and a bad differentially private algorithm. The authors have invented a bad one, and want you to believe it is the only one.
 
@@ -326,7 +326,7 @@ There are four complaints in this section; let's review them:
    
    Yes, this is why we didn't stop doing research once we wrote about the Laplace mechanism, even though that very paper contains the mechanisms you should have used for correlation. It turns out that there are lots of other options, which can be much better. If you look into them for just a few brief moments, or read your emails from a few years ago, you will discover some. Other options include: asking an expert, rather than pretending to be an expert.
 
-The authors seem to be some mix of willfully ignorant, technically deficient, and intentionally misleading. I can't really tell which.
+The authors seem to be some mix of willfully ignorant, technically deficient, and intentionally misleading. I can't really tell what mix.
 
 #### Part III: Blah blah
 
@@ -343,17 +343,20 @@ The section is worth a read for their takedowns of quite famous and well-regarde
 The conclusions mostly alternate florid prose with a few non-crucial misunderstandings about how differential privacy should be positioned. The prose is funnier, so let's copy that:
 
 > Differential privacy faces a hard choice. It must either recede into the ash heap of theory, or surrender its claim to uniqueness and supremacy.
-
-
+>
+> ...
+>
 > In its pure form, differential privacy has no chance of broad application. 
-
-
+>
+> ...
+>
 > In its strictest form, differential privacy is a farce. In its most relaxed form, it’s no different, and no better, than other methods.
-
-
+>
+> ...
+>
 > Adopting differential privacy as a regulatory best practice or mandate would be the end of research as we know it.
 
-Actually, I really like this last one. "Research as we know it" at the moment seems to allow any random idiot to demand access to data, independent of the privacy cost to the participant. Instead, differential privacy, and techniques like it, align accuracy with privacy, and challenge researchers to frame their questions in a way that best respects privacy. I'm ok with that.
+Actually, I really like this last one. "Research as we know it" at the moment seems to allow any random idiot to demand access to data, independent of the privacy cost to the participant. Instead, differential privacy, and techniques like it, align accuracy with privacy concerns, and challenge researchers to frame their questions in a way that best respects privacy. I'm ok with that change.
 
 Here is the article's last line:
 
