--- a/posts/2016-02-06.md
+++ b/posts/2016-02-06.md
@@ -74,17 +74,17 @@ One easy way to visualize a distribution is just to draw a bunch of samples from
 
 So let's look at the cumulative density functions for those A and B people. We'll sample 1,000 people and compute the A fraction, repeating 1,000 times so that we can draw a smooth looking line.
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf.png)
 
 As expected, we see a sharp spike up at around 40%, which is good because we really don't expect to see values far away from that value.
 
 Let's take a different view and ask about the distribution of *error*. When we draw a sample, how different is it from 40%? This is just taking those numbers up there and sliding the x-axis around, which isn't all that hard. We get to zoom in if we like, hoping to see fine detail around zero.
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf2.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf2.png)
 
 Now let's do the same thing with the Laplace distribution with parameter 10.0. This corresponds to an `epsilon` value of 0.1, which is not such horrible privacy guarantees. To make the point clearer, I've just plotted these samples on top of the plot just above, for the inherent randomness of the sampling process:
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf3.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf3.png)
 
 So, the error we are introducing for 0.1-differential privacy isn't actually worse than the error inherent in this particular measurement process. In this case, it seems totally workable (at least, to me). The concentration is tighter near the correct answer, and a bit looser out in the tails (which should make sense with folks familiar with the Laplace and Gaussian distributions).
 
@@ -120,7 +120,7 @@ This raises an important point about differential privacy: as you ask more quest
 
 To do our experiment we will want to compute the count, the mean, and the second moment each with privacy parameter `epsilon/3`, which triples the amount of noise we will introduce. Oh no! Well, let's see how it looks, anyhow. Here are 1,000 samples of the standard deviation, where I have subtracted off the mean value to center the error at zero, and 1,000 of 0.1-differentially private measurements of the standard deviation, also with the true value subtracted off.
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf4.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf4.png)
 
 Because I am brave, and writing the text before doing experiments, I will say that while the constrast isn't as stark as with our counts up above, the error from differential privacy is not drastically worse than the inherent randomness of the standard deviation statistic. TODO: UPDATE; APPEND-ONLY.
 
@@ -203,15 +203,15 @@ That was so easy! Except for the parts about statistics, which whatever, right?
 
 Let's take a peek! Let's take our population of A and B people, and indicate A people by a value of -1 and B people by a value of 1. Now let's randomly give each person some predispositions for chocolate, indepedent of their type. We should see no correlation. 
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf5.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf5.png)
 
 If instead A people always like chocolate (pairs (-1, 1)) and B people never like chocolate (pairs (1, -1)), we see should something else: a strong negative correlation.
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf6.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf6.png)
 
 Ok, we don't really see that, do we? We have enough questions here (six) that we have to scale down the privacy parameter 0.1 quite a ways to get 0.1-differential privacy. We could let the privacy parameter drift upwards, or survey some more people. Let's say we ask 10,000 people instead. The privacy guarantee for each respondent stays the same, but the accuracy improves (here both distributions are on the same plot, because they don't interfere as much)
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf7.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf7.png)
 
 ### Cumulative density functions
 
@@ -229,17 +229,17 @@ Well neat. All those questions about 0.01 sized intervals are each about disjoin
 
 I'm not going to plot all those counts, because there are 100 * 2^64 of them, but let's look at the 400 values between -2 and 2, in the case where our data are actually just uniformly distributed between -1 and 1.
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf8.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf8.png)
 
 Lots of noise, huh? Kind of hard to tell where there is data and where there isn't data.
 
 Let's look at this a different way, where we look at intervals of size 0.1.
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf9.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf9.png)
 
 That is getting a little better. How about intervals of size 1
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf10.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf10.png)
 
 Wow, ok. This is pretty clear. I wish we had asked this question at the beginning. Actually, is it clear? We see that there are few points less than -1 and greater than 1, but this last figure doesn't really tell us where the points are between -1 and 1. They might all be between -0.01 and 0.01, and we would see the same sort of measurement.
 
@@ -289,11 +289,11 @@ In the case of the score function up above, it is really easy to evaluate the ex
 
 Let's take 1,000 points uniform between -1 and 1, represented as `i32` values, and look at the distribution of outputs returned by the exponential mechanism with epsilon = 0.1.
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf11.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf11.png)
 
 It looks like we have most of our samples around the true median, but it is a bit hard to see the detail. Let's zoom in.
 
-![https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf12.png](cumulative density function)
+![cdf](https://github.com/frankmcsherry/blog/blob/master/assets/privacy/primer/cdf12.png)
 
 Wow. Quite concentrated.
 
